# discord-rec

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  deny.toml  discord-rec.desktop
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: appimage.rs  clip.rs  config.rs  convert.rs  instance.rs  main.rs  mics.rs  portal.rs  pw.rs  recorder.rs  service.rs  updates.rs  voice.rs  winproc.rs  x11.rs
src-tauri/src/win/: audio.rs  console.rs  job.rs  mod.rs  window.rs
ui/: index.html  main.js  style.css
