[package]
name = "discord-rec"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "Enregistre automatiquement (audio + vidéo) les sessions vocales Discord via PipeWire et le portail Wayland"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "sync", "time"] }
ashpd = { version = "0.13", default-features = false, features = ["tokio", "screencast"] }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
libc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Faux positifs fréquents avec tauri::command et les structs de config
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
missing_errors_doc = "allow"
struct_excessive_bools = "allow"
