[package]
name = "discord-rec"
version = "0.5.1"
edition = "2021"
rust-version = "1.87"
description = "Enregistre automatiquement (audio + vidéo) les sessions vocales Discord via PipeWire et X11/XWayland"
license = "MIT"
repository = "https://github.com/micferna/discord-rec"
authors = ["micferna"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
tauri-plugin-updater = "2.10.1"

[target.'cfg(unix)'.dependencies]
ashpd = { version = "0.13", default-features = false, features = ["tokio", "screencast"] }
libc = "0.2"
# Montage/clip : coupe par temps d'un enregistrement. gst-launch (utilisé
# partout ailleurs) ne sait pas couper par temps ; on pilote donc le pipeline
# par programme. Dépendance de BUILD uniquement — le runtime GStreamer est déjà
# requis. Linux d'abord (cf. clip.rs gaté cfg(unix)). gstreamer-app fournit
# appsink/appsrc : on découple le décodage (seekable) du muxage (qtmux ne
# survit pas à un flush), pour ne décoder que la fenêtre voulue.
gstreamer = "0.23"
gstreamer-app = "0.23"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Console",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Faux positifs fréquents avec tauri::command et les structs de config
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
missing_errors_doc = "allow"
struct_excessive_bools = "allow"
